package test0;

public abstract class AShot extends ASprite {

}
