package test0;

public  class Ball extends AShot{
    @Override
    public void update() {

    }
}
