package test0;

public class Cruise extends Ship{

    public Cruise() {
        nombre = "Cruise";
    }

}
