package test0;

public interface ICanDisappear {
    void setVisibility(boolean b);
    boolean getVisibility();

}
