package test0;

import java.util.ArrayList;

public interface ICanShoot {
    ArrayList<AShot> shoot();

}
