package test0;

public class Ship extends ASprite {

    String nombre;
    public Ship() {
        nombre = getClass().getSimpleName();
    }

    @Override
    public void update() {

    }
}
